fix back button on safari

--- a/src/style/app.less
+++ b/src/style/app.less
@@ -937,6 +937,10 @@ svg {
 	animation: nector-shimmer-keyframe 2.5s 3;
 }
 
+.nector-cursor-pointer{
+	cursor: pointer !important;
+}
+
 /* antd xs */
 @media only screen and (max-width: 575px) {
 	.nector-reviews-heading-container h4 {
